Added Create and index view for Payrecard

--- a/PayrollSystem/Views/Shared/AdminLayout.cshtml
+++ b/PayrollSystem/Views/Shared/AdminLayout.cshtml
@@ -168,11 +168,11 @@
                             </a>
                             <ul aria-expanded="false" class="collapse  first-level">
                                 <li class="sidebar-item">
-                                    <a asp-controller="PaymentRecordss" asp-action="Create" class="sidebar-link">
+                                    <a asp-controller="PaymentRecords" asp-action="Create" class="sidebar-link">
 
                                         <span class="hide-menu">New Payment</span>
                                     </a>
-                                    <a asp-controller="PaymentRecordss" asp-action="Index" class="sidebar-link">
+                                    <a asp-controller="PaymentRecords" asp-action="Index" class="sidebar-link">
 
                                         <span class="hide-menu">Payment Records</span>
                                     </a>
