--- a/PayrollSystem/Views/_ViewImports.cshtml
+++ b/PayrollSystem/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using PayrollSystem.Data
 @using PayrollSystem.Models
 @using PayrollSystem.Models.EmployeeViewModel
+@using PayrollSystem.Models.PaymentRecardViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
