--- a/PayrollSystem/Views/PaymentRecords/Index.cshtml
+++ b/PayrollSystem/Views/PaymentRecords/Index.cshtml
@@ -54,10 +54,10 @@
                                                 @*<i class="fa-solid fa-pen-to-square"></i>*@
                                                 <i class="fa-solid fa-file-invoice-dollar"></i> Preview Payslip
                                             </a> &nbsp;
-                                            @*<a class="btn btn-info btn-rounded" asp-action="PrintPayslip" asp-route-id="@item.Id">
+                                            <a class="btn btn-info btn-rounded" asp-action="PayslipPDF" asp-route-id="@item.Id">
                                                 <i class="fa-solid fa-file-pdf"></i> Payslip PDF
                                             </a>
-                                            <a class="btn btn-primary btn-rounded" asp-action="Edit" asp-route-id="@item.Id">
+                                            @*<a class="btn btn-primary btn-rounded" asp-action="Edit" asp-route-id="@item.Id">
                                                 <i class="fa-solid fa-pen-to-square"></i> Edit
                                             </a> &nbsp;
                                             <a class="btn btn-info btn-rounded" asp-action="Detail" asp-route-id="@item.Id">
