Update the project to ASP.NET Core 7.0

--- a/PayrollSystem/Views/PaymentRecords/Detail.cshtml
+++ b/PayrollSystem/Views/PaymentRecords/Detail.cshtml
@@ -49,7 +49,7 @@
                         <label asp-for="PayMonth"></label>
                     </div>
                     <div class="form-group col-md-4">
-                        <input asp-for="PayMonth" class="form-control" style="background-color:darkgray" />
+                        <input asp-for="PayMonth" class="form-control" readonly style="background-color:darkgray" />
                     </div>
                     <div class="form-group col-md-2 font-weight-bold">
                         <label asp-for="Year"></label>
