--- a/PayrollSystem/Views/PaymentRecords/Payslip.cshtml.css
+++ b/PayrollSystem/Views/PaymentRecords/Payslip.cshtml.css
@@ -1,3 +1,23 @@
-﻿hr {
-    color: red;
+﻿table {
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid black;
+}
+
+    table td {
+        line-height: 25px;
+        padding-left: 15px;
+    }
+
+    table th {
+        background-color: #fbc403;
+        color: #363636;
+    }
+.testing {
+    margin: 0 auto;
+    background-color: red;
+}
+
+.frame {
+
 }
